--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+
 body {
   padding: 0;
   margin: 0;
-  background: #383c4aff;
-  font-family: 'Jackwrite';
+  background: #383c4a;
+  font-family: 'Architects Daughter', cursive;
 }
 #gol{
   display: flex;
@@ -16,12 +17,13 @@ body {
 }
 .content
 {
+  padding: 8px;
   background-color: #7c818c;
 }
 .game_of_life_info
 {
   display: block;
   text-align: center;
-  color: #7c818c;
-  background: #383c4a;
+  color: #5294e2;
+  background:#383c4a;
 }
