--- a/style.css
+++ b/style.css
@@ -5,16 +5,21 @@ body {
   background: #383c4a;
   font-family: 'Architects Daughter', cursive;
 }
-#gol{
+#sim_back{
+  display: block;
+  position: fixed !important;
+  z-index: -1;
+}
+#flock_sim{
   display: table;
   align-items: center;
   width:100vw;
   height: 100vh;
-  position: fixed !important;
+
   top:0;
   left: 0;
 }
-#gol > *
+#flock_sim > *
 {
   margin:auto;
 }
@@ -28,13 +33,15 @@ body {
 .anchor
 {
   display: table;
-  width:100vw;
+  width: 100vw;
   height: 100vh;
 }
-.game_of_life_info
+#othr
 {
   display: block;
-  text-align: center;
-  color: #5294e2;
-  background:#383c4a;
+}
+#body_content
+{
+  top:0;
+  left: 0;
 }
