--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body,html,main{
 	margin: 0;
 	width: 100vw;
 	height: 100%;
-	background-color: #383c4a;
+	background-color: #003049;
 	font-family: 'Architects Daughter', cursive;
 	z-index: -11;
 }
@@ -32,7 +32,7 @@ section.box
 {
 	padding: 5px;
 	color:white;
-	background-color:#4b5162aa;
+	background-color:#003049aa;
 }
 
 
