--- a/style.css
+++ b/style.css
@@ -1,12 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 *
 {  box-sizing: border-box;}
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+	display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
+.transp
+{
+	background-color: transparent !important;
+}
+.no_pad
+{
+	padding: 0 !important;
+}
 body,html,main{
 	padding: 0;
 	margin: 0;
 	width: 100vw;
 	height: 100%;
-	background-color: #003049;
+	background-color: #24305E;
 	font-family: 'Architects Daughter', cursive;
 	z-index: -11;
 }
@@ -24,7 +42,7 @@ main section.box,section.anchor
 {
 	position: relative;
 	min-height: 100vh;
-	min-width: 100vw;
+	min-width: 100wh;
 	height: 100vh;
 	width: 100vw;
 	scroll-snap-align: start;
@@ -34,7 +52,7 @@ main section.box,section.anchor
 section.box
 {
 	color:white;
-	background-color:#003049aa;
+	background-color: #24305Eaa;
 }
 .horz_snap
 {
@@ -51,7 +69,7 @@ section.box
 {
 	position: relative;
 	padding: 0 !important;
-	background-color: transparent;
+	background-color:#24305Eaa;
 	flex: none;
 	height: 100vh;
 	width: 100vw;
