--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+:root
+{
+	--main-bg:#24305E;
+	--main-bg-tr:#24305e6c;
+}
 *{  
 	box-sizing: border-box;
 	-ms-overflow-style: none;  /* IE and Edge */
@@ -20,7 +25,7 @@ body,html,main{
 	margin: 0;
 	width: 100vw;
 	height: 100%;
-	background-color: #24305E;
+	background-color: var(--main-bg);
 	font-family: 'Architects Daughter', cursive;
 	z-index: -11;
 }
@@ -48,7 +53,7 @@ main section.box,section.anchor
 section.box
 {
 	color:white;
-	background-color: #24305Eaa;
+	background-color: var(--main-bg-tr);
 }
 .horz_snap
 {
@@ -64,7 +69,7 @@ section.box
 {
 	position: relative;
 	padding: 0 !important;
-	background-color:#24305Eaa;
+	background-color: var(--main-bg-tr);
 	flex: none;
 	height: 100vh;
 	width: 100vw;
@@ -111,5 +116,18 @@ section.sim_back
 {
 	margin:auto;
 }
+ul
+{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+ul li
+{
+	width: 200px;
 
-
+}
+ul li:hover
+{
+	background-color: #ffffff33;
+}
