--- a/styles/style.css
+++ b/styles/style.css
@@ -154,11 +154,14 @@ a.links div.title
 #tools_sec
 {
 	flex-wrap:wrap;
-	justify-content: space-evenly;
+	justify-content: space-around;
+	
+	width: 100%;
 }
 #tools_sec > object
 {
 	padding: 10px;
+	margin: 10px;
 	background-color: #ffffffc7;
 	border-radius: 5px;
 }
