--- a/styles/style.css
+++ b/styles/style.css
@@ -31,30 +31,49 @@ body,html,main{
 }
 body
 {
-	overflow-y: hidden;
+	overflow-y: auto;
 }
 main
 {
-	z-index: 1;
-	overflow-y: scroll;
-	scroll-snap-type: y mandatory;
+
 }
-main section.box,section.anchor
+section.grid
 {
-	position: relative;
-	flex: none;
-
+	display: flex;
+	scroll-snap-type: y mandatory;
+	flex-direction: column;
+	overflow-y: auto;
 	height: 100vh;
-	width: 100vw;
+}
+section.grid section.row
+{
+	flex: none;
+	
+	display: flex;
+	flex-direction: row;
 
+	overflow-x: auto;
+	height: 100vh;
+	
+	scroll-snap-type: x mandatory;
 	scroll-snap-align: start;
 	
 	border: 0px white dashed;
 	color:white;
-	background-color: var(--main-bg-tr);
+
 	
+
 	z-index: 1;
 }
+section.row section.col
+{
+	background-color: var(--main-bg-tr);
+	flex:none;
+	scroll-snap-align:start;
+	height: 100vh;
+	width: 100vw;
+}
+
 section.anchor
 {
 	background-color: transparent !important;
@@ -109,7 +128,7 @@ ul li
 {
 	width: 200px;
 }
-.box_wrapper
+.col_wrapper
 {
 	width: 100%;
 	height: 100%;
