--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@ body,html,main{
 	height: 100%;
 	background-color: var(--main-bg);
 	font-family: 'Architects Daughter', cursive;
+	scroll-behavior: smooth;
 	z-index: -11;
 }
 body
