site_map_position

--- a/styles/style.css
+++ b/styles/style.css
@@ -213,8 +213,8 @@ section.site_map_sec
 	margin: 0;
 	padding: 0;
 	position: fixed;
-	bottom: 0;
-	right: 0;
+	top: 0;
+	left: 0;
 	z-index: 100;
 	opacity: 0;
 }
